// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Get a free hosted Postgres database in seconds: `npx create-db`

generator client {
  provider = "prisma-client-js"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

enum Role{
  ADMIN
  CLIENT
  EMPLOYEE
}
enum Provider{
  LOCAL
  GOOGLE
}
model User {
  id String @id @default(uuid())
  firstName String
  lastName String
  phone String?
  email String @unique
  password String?
  provider Provider @default(LOCAL)
  googleId String? @unique
  role Role @default(CLIENT)
  addedByAdminId String?
  isPlaceholderEmail Boolean @default(false)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model VerifyToken {
  id        String   @id @default(uuid())
  email     String   @unique  
  code      String
  firstName String            
  lastName  String            
  password  String            
  phone     String?
  expiresAt DateTime
}

