// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Get a free hosted Postgres database in seconds: `npx create-db`

generator client {
  provider = "prisma-client-js"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

enum ProjectType {
  SITE_WEB
  SEO
  GOOGLE_ADS
  SOCIAL_MEDIA
  PHOTO_VIDEO
  EMAIL_MARKETING
  COMMUNITY_MANAGER
  BRANDING
  OTHER
}

enum BriefStatus {
  PENDING
  ACCEPTED
  REFUSED
  IN_PROGRESS
  COMPLETED
}

enum TaskStatus {
  PENDING
  IN_PROGRESS
  COMPLETED
}

enum Priority {
  LOW
  MEDIUM
  HIGH
}

model Brief {
  id          String      @id @default(uuid())
  clientId    String
  assignedToIds String[]
  assignedById String?
  assignedAt   DateTime?
  title       String
  projectType ProjectType
  description String
  features    String[]
  budgetRange String
  deadline    DateTime
  status      BriefStatus @default(PENDING)
  statusReason String?
  statusUpdatedById String?
  statusUpdatedAt   DateTime?
  attachments String[]
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt
  tasks       Task[]

  @@index([clientId])
  @@index([status])
}

model Task {
  id          String     @id @default(uuid())
  briefId     String
  brief       Brief      @relation(fields: [briefId], references: [id], onDelete: Cascade)
  name        String
  description String
  priority    Priority   @default(MEDIUM)
  startDate   DateTime
  endDate     DateTime
  status      TaskStatus @default(PENDING)
  createdAt   DateTime   @default(now())
  updatedAt   DateTime   @updatedAt

  @@index([briefId])
}
